spec/testcasedatajava/UnreachableStatementTest.txt
./org/example/RecursiveMath.java:12: error: unreachable statement
            System.out.println("test");
            ^
1 error
make: *** [Makefile:5: test] Error 1
